Adicionando a Home do projeto

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid conteudo">
-  <img class="vetor-1" src="https://i.imgur.com/0Eo6R0r.png" alt="">
-  <img class="vetor-2" src="https://i.imgur.com/jca9dOE.png" alt="">
-  <form action="" class="">
+  <form action="">
     <section class="cartao-visita ">
+      <div class="elemento-1"></div>
+      <div class="elemento-2"></div>
+      <div class="elemento-3"></div>
+      <div class="elemento-4"></div>
       <div class="row ml-0 mr-0 cartao-visita-texto">
         <div class="col-md-12">
           <h1>Hello, Friend!</h1>
@@ -14,20 +16,15 @@
       </div>
     </section>
     <div class="cadastro ">
-      <div class="top-descricao ">
-        <div class="row">
-          <div class="col-12 texto">
-            <h2>Place2Getter</h2>
-            <div class="redes-sociais">
-              <a href=""><i class="fab fa-google-plus"></i></a>
-              <a href=""> <i class="fab fa-github"></i></a>
-              <a href=""><i class="fab fa-facebook"></i></a>
+      <div class="inputs ">
+        <div class="top-descricao">
+          <div class="row">
+            <div class="col-12 texto">
+              <h2>Place2Getter</h2>
             </div>
           </div>
         </div>
-      </div>
-      <div class="inputs">
-        <div class="input-nome ">
+        <div class="input-nome">
           <i class="fas fa-user"></i>
           <input type="text" placeholder="Informe o seu nome">
         </div>
@@ -55,7 +52,7 @@
         </select>
 
         <div class="buttons">
-          <a routerLink='/logar'class="button">Cadastrar</a>
+          <a routerLink='/logar' class="button">Cadastrar</a>
         </div>
       </div>
     </div>
