--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -1,3 +1,7 @@
+* {
+  overflow: hidden;
+}
+
 .borda {
   border: 1px solid red;
 }
@@ -8,59 +12,57 @@
   align-items: center;
   height: 100vh;
   position: relative;
+  background: #ffffff3a;
 }
 
 img.vetor-1 {
-  width: 350px;
-  height: 300px;
+  width: 700px;
+  height: 180px;
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: 0;
+  animation: waves-animation 5s ease-in-out infinite;
 }
 
-img.vetor-2 {
+/* .vetor-2 {
   width: 300px;
-  height: 280px;
+  height: 250px;
+  border-radius: 50%;
   position: absolute;
   top: 0;
   left: 0;
-}
-
-.top-descricao {
-  width: 400px;
-  display: flex;
-  justify-content: center;
-}
+  background: #6284FF;
+  animation: animation-circlue-2 10s ease-in-out infinite;
+} */
 
 .top-descricao h2 {
-  color: #4BB9A3;
-  font-size: 35px;
-  font-weight: 500;
-  text-align: center;
+  color: #7dc9bacb;
+  font-size: 34px;
+  font-weight: 300;
 }
 
 .redes-sociais {
   display: flex;
   justify-content: center;
-  margin-right: 18px;
 }
 
 .redes-sociais i {
   margin-left: 20px;
   color: rgba(0, 0, 0, 0.603);
   font-size: 24px;
-  margin-top: 10px;
   transition: .1s ease-in-out;
+  padding: 5px;
 }
 
 .redes-sociais i:hover {
   color: #60dbc5;
-  transform: scale(130%);
+  transform: scale(120%);
 }
 
 form {
   width: 1000px;
-  height: 500px;
+  height: 480px;
   background-color: white;
   border-radius: 25px;
   display: flex;
@@ -69,12 +71,14 @@ form {
 }
 
 .cadastro {
-  width: 480px;
-  height: 490px;
+  width: 560px;
+  height: 450px;
   margin-right: 30px;
   position: absolute;
   right: 0;
-  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .texto {
@@ -86,8 +90,8 @@ form {
 
 .inputs {
   width: 400px;
-  margin-top: 15px;
   margin-left: 50px;
+  margin-top: 20px;
 }
 
 .inputs i {
@@ -95,15 +99,25 @@ form {
 }
 
 .inputs input {
-  width: 300px;
+  width: 350px;
   height: 50px;
   border: none;
   padding-left: 15px;
   margin-top: 10px;
 }
 
+.inputs select {
+  width: 368px;
+  height: 50px;
+  margin-top: 10px;
+}
+
 .inputs input:focus {
   outline: none;
+}
+
+.inputs input::placeholder {
+  color: rgba(0, 0, 0, 0.541);
 }
 
 .buttons {
@@ -113,7 +127,7 @@ form {
   background-color: #3AB19B;
   border-radius: 20px;
   position: absolute;
-  left: 44%;
+  left: 50%;
   margin-top: 20px;
   transform: translateX(-50%);
 }
@@ -191,6 +205,53 @@ form {
   letter-spacing: 1px;
 }
 
+.elemento-1 {
+  width: 150px;
+  height: 70px;
+  background: linear-gradient(280deg, #c9c9c90e, #edecec38);
+  position: absolute;
+  top: 35px;
+  left: 25px;
+  transform: rotate(50deg);
+  animation: elemento-animacao-1 15s ease-in-out infinite;
+}
+
+.elemento-2 {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: linear-gradient(280deg, #ffffff11, #edecec0e);
+  position: absolute;
+  top: 60%;
+  right: 25px;
+  transform: rotate(40deg);
+  animation: elemento-animacao-2 8s ease-in-out infinite;
+}
+
+.elemento-3 {
+  width: 100px;
+  height: 50px;
+  background: linear-gradient(45deg, #ffffff2d, #8585850e);
+  position: absolute;
+  top: 35px;
+  right: 25px;
+  transform: rotate(-40deg);
+  animation: elemento-animacao-3 15s ease-in-out infinite;
+}
+
+.elemento-4 {
+  width: 50px;
+  height: 100px;
+  background: linear-gradient(45deg, #f3f3f32f, #8585850e);
+  position: absolute;
+  bottom: 10%;
+  left: 25%;
+  transform: rotate(-180deg);
+  animation: elemento-animacao-3 15s ease-in-out infinite;
+}
+
+
+
 form select {
   border: none;
   color: rgba(0, 0, 0, 0.644);
@@ -204,4 +265,86 @@ form select {
 form select:focus {
   outline: none;
 
+}
+
+@keyframes animation-circlue {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateY(-15%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes animation-circlue-2 {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateY(15%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes elemento-animacao-1 {
+  0% {
+    transform: translate3d(0)
+  }
+
+  50% {
+    transform: translateY(250%);
+  }
+
+  100% {
+    transform: translate3d(0)
+  }
+}
+
+@keyframes elemento-animacao-2 {
+  0% {
+    transform: translate3d(0)
+  }
+
+  50% {
+    transform: translateY(-50%);
+  }
+
+  100% {
+    transform: translate3d(0)
+  }
+}
+
+@keyframes elemento-animacao-3 {
+  0% {
+    transform: translate3d(0)
+  }
+
+  50% {
+    transform: translatex(-100%);
+  }
+
+  100% {
+    transform: translate3d(0)
+  }
+}
+
+@keyframes waves-animation {
+  0%{
+    transform: scaleX(100%);
+  }
+  50%{
+    transform: scaley(135%);
+  }
+  100%{
+    transform: scaleX(100%);
+  }
 }
