--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Place2Getter</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,4 +20,19 @@
       </ul>
     </div>
   </nav>
+ -->
 
+<header class="">
+  <div class="logo">
+    <a href=""><img src="https://i.imgur.com/LTOXyzg.png" alt=""></a>
+  </div>
+  <div class="links ">
+    <a href="">Seja um mentor</a>
+    <a href="">Quem somos</a>
+    <a routerLink='/contato'>Contato</a>
+  </div>
+  <div class="register">
+    <a routerLink='/logar' class="button-1">SING IN</a>
+    <a routerLink='/cadastrar' href="" class="button-2">REGISTER</a>
+  </div>
+</header>
