--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid conteudo">
   <img class="vetor-1" src="https://i.imgur.com/1gMNFmZ.png" alt="">
   <img class="vetor-2" src="https://i.imgur.com/juEgnty.png" alt="">
-  <form action="">
+  <form action="" class="">
     <div class="login">
       <div class="top-descricao">
         <div class="row">
@@ -24,16 +24,16 @@
           <a href="" class="button">Acessar</a>
         </div>
     </div>
-    <section class="cartao-visita ">
-      <div class="row ml-0 mr-0 cartao-visita-texto">
-        <div class="col-md-12">
-          <h1>Welcome Back!</h1>
-          <p> Colecione momentos e viva novas experiências.</p>
-        </div>
-        <div class="button-cartao">
-          <a routerLink='/cadastrar'>Cadastrar</a>
-        </div>
-      </div>
-    </section>
   </form>
+  <section class="cartao-visita d-none d-sm-block">
+    <div class="row ml-0 mr-0 cartao-visita-texto">
+      <div class="col-md-12">
+        <h1>Welcome Back!</h1>
+        <p> Colecione momentos e viva novas experiências.</p>
+      </div>
+      <div class="button-cartao">
+        <a routerLink='/cadastrar'>Cadastrar</a>
+      </div>
+    </div>
+  </section>
 </div>
