--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -62,23 +62,25 @@ img.vetor-1 {
 
 form {
   width: 1000px;
-  height: 480px;
+  height: 700px;
   background-color: white;
   border-radius: 25px;
   display: flex;
   align-items: center;
   position: relative;
+  border: 1px solid red;
 }
 
 .cadastro {
   width: 560px;
-  height: 450px;
+  height: 750px;
   margin-right: 30px;
   position: absolute;
   right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .texto {
