Adicionando animações na home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,20 @@
 <div class="container-fluid m-0 p-0 ">
   <section class="banner container-fluid">
-    <div class="row">
-      <div class="col-md-7 conteudo rellax" data-rellax-speed="4" data-rellax-zindex="5">
-        <h2>Place2Getter</h2>
-        <h4>Juntando pessoas
+    <div class="row" >
+      <div class="col-md-7 conteudo" #banner>
+        <h2 class="descricaoBanner">Place2Getter</h2>
+        <h4 class="textoBanner">Juntando pessoas
           experiências e histórias.</h4>
       </div>
     </div>
-    <div class="square">
-      <img src="https://i.imgur.com/thgnpzw.png" class="rellax" data-rellax-speed="-5" alt="">
+    <div class="square" #divisorBanner>
+      <img src="https://i.imgur.com/thgnpzw.png" class="circleBanner" data-rellax-speed="-5" alt="">
     </div>
     <div class="circlue-1 rellax" data-rellax-speed="2"></div>
     <div class="circlue-2"></div>
     <div class="circlue-3"></div>
     <div class="circlue-4"></div>
+    <img class="icon-mouse d-none d-sm-block" src="../../assets/Icons/mouse.png" alt="">
   </section>
   <div class="container-fluid content-1">
     <section class="">
@@ -30,8 +31,8 @@
       <img class="line-style img-fluid" src="https://i.imgur.com/hkacIZe.png" alt="">
       <img class="vetor-3 rellax" data-rellax-speed="1" src="https://i.imgur.com/O4VxOUA.png" alt="">
       <div class="row">
-        <div class="col-md-12">
-          <h3>Compartilhe com milhões
+        <div class="col-md-12 texto-persona">
+          <h3 class="">Compartilhe com milhões
             de jovens seus conhecimentos
           </h3>
         </div>
