--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,11 +22,11 @@
   </nav>
  -->
 
-<header class="">
+<header class="" #header>
   <div class="logo">
     <a href=""><img src="https://i.imgur.com/LTOXyzg.png" alt=""></a>
   </div>
-  <div class="links ">
+  <div class="links">
     <a href="">Seja um mentor</a>
     <a href="">Quem somos</a>
     <a routerLink='/contato'>Contato</a>
