--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -67,7 +67,8 @@
         </select>
 
         <div class="buttons">
-          <button type="submit" (click)='cadastrar()' class="button">Cadastrar</button>
+          <button type="submit" (click)='cadastrar()' class="button" >Cadastrar</button>
+          <button type="submit" class="button" routerLink="/home">Cancelar</button>
         </div>
       </div>
     </div>
