--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="buttons">
-        <a href="" class="button">Acessar</a>
+        <a (click)='acessar()'>Acessar</a>
       </div>
     </div>
   </form>
@@ -33,7 +33,7 @@
       </div>
       <div class="button-cartao">
         <a routerLink='/cadastrar'>Cadastrar</a>
-      </div>
+        </div>
     </div>
   </section>
 </div>
