Inserindo animações na Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid m-0 p-0 ">
   <section class="banner container-fluid">
-    <div class="row" >
+    <div class="row">
       <div class="col-md-7 conteudo" #banner>
         <h2 class="descricaoBanner">Place2Getter</h2>
         <h4 class="textoBanner">Juntando pessoas
@@ -56,8 +56,8 @@
       </div>
     </div>
     <div class="img-mentor">
-      <img src="https://i.imgur.com/k6hF4WO.png" alt="">
-      <img src="https://i.imgur.com/5Pvmcxf.png" alt="">
+      <img class="img-mentor-1" src="https://i.imgur.com/k6hF4WO.png" alt="">
+      <img class="img-mentor-2" src="https://i.imgur.com/5Pvmcxf.png" alt="">
     </div>
     <div class="caixa-cor">
       <img src="https://i.imgur.com/Lt0mLyj.png" alt="">
@@ -112,6 +112,27 @@
       </div>
     </div>
   </div>
+
+  <section class="mentores">
+    <div class="circlue-mentor"></div>
+    <div class="row m-0 p-0 ">
+      <div class="col-md-6  ">
+        <img class="img-fluid" src="https://i.imgur.com/kzd7xUh.jpeg" alt="">
+      </div>
+      <div class="col-md-6 m-0 p-0  texto-mentoria-2">
+        <h2 >Compartilhando
+          experiências </h2>
+        <div class="row  m-0 p-0 -mentoria ">
+          <div class="col-md-8 ">
+            <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
+              cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
+              nulla aute culpa Lorem voluptate. Aliquip Lorem qui pariatur velit irure officia aliqua labore nisi
+              eiusmod magna eu quis. Nisi cillum ullamco amet duis sunt aute velit est elit minim fugiat.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 
 
