--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,8 @@ body {
   color: #ffffff00;
 }
 
+
+
 .banner {
   background: url(https://i.imgur.com/280EMib.png);
   background-size: cover;
@@ -17,14 +19,14 @@ body {
   position: relative;
 }
 
-img.icon-mouse{
-    width: 30px;
-    height: 30px;
-    filter: invert(1);
-    position: absolute;
-    bottom: 10%;
-    right: 45%;
-    transform: translate(-50%);
+img.icon-mouse {
+  width: 30px;
+  height: 30px;
+  filter: invert(1);
+  position: absolute;
+  bottom: 10%;
+  right: 45%;
+  transform: translate(-50%);
 }
 
 .square {
@@ -469,12 +471,53 @@ a.link-categoria {
   height: 400px;
   background: #EAFFFA;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: -20%;
+  right: 5%;
   border-radius: 50%;
 }
 
 
+.mentores {
+  position: relative;
+}
+
+.mentores img {
+  width: 550px;
+  background-size: auto;
+  height: auto;
+}
+
+.mentores h2 {
+  color: #C9C0C0;
+  font-size: 54pt;
+  font-weight: 800;
+  text-align: end;
+  line-height: 100%;
+  margin: 8% 0;
+}
+
+.mentores p {
+  font-size: 16pt;
+  font-weight: 500;
+  color: #969696;
+  padding-left: 10px;
+}
+
+.borda-mentoria {
+  border-left: 2px solid rgba(249, 128, 60, 0.62);
+  height: 370px;
+  margin-top: 45px;
+}
+
+.circlue-mentor {
+  background: rgba(249, 128, 60, 0.18);
+  width: 350px;
+  height: 350px;
+  position: absolute;
+  bottom: 0;
+  right: 15%;
+  border-radius: 50%;
+}
 
 
 
