--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,19 @@
 .borda{
     border: 1px solid red;
 }
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255); 
+    border-radius: 20px;       /* roundness of the scroll thumb */       /* color of the tracking area */
+    
+}
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: aquamarine;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+  }
