--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header></app-header> <!--não está aceitando f5 atualizar-->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
