--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="input-senha">
           <i class="fas fa-lock"></i>
-          <input (input)="confirmarSenha($event)" name="senha" type="password" placeholder="Senha">
+          <input (input)='confirmeSenha($event)' name="senha" type="password" placeholder="Senha">
           <a href=""><i class="far fa-eye"></i></a>
         </div>
 
