--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -13,8 +13,18 @@
         <div class="row d-flex justify-content-center mt-4 mb-5">
           <div class="col-md-3">
             <div class="form-group">
-              <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao"
+              <input [(ngModel)]='tema.descricao' name="descricao" type="text" class="form-control" id="descricao"
               placeholder="Digite a descrição do tema">
+            </div>
+
+            <div class="form-group">
+              <input [(ngModel)]='tema.hashtag' name="hashtag" type="text" class="form-control" id="hashtag"
+              placeholder="#">
+            </div>
+
+            <div class="form-group">
+              <input [(ngModel)]='tema.servico' name="servico" type="text" class="form-control" id="servico"
+              placeholder="Digite o serviço">
             </div>
 
             <div class="d-flex justify-content-center">
