--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -58,25 +58,19 @@ img.vetor-1 {
 
 form {
   width: 1000px;
-  height: 700px;
   background-color: white;
   border-radius: 25px;
   display: flex;
   align-items: center;
-  position: relative;
+  justify-content: space-around;
 }
 
-.cadastro {
-  width: 560px;
-  height: 750px;
-  margin-right: 30px;
-  position: absolute;
-  right: 0;
+/* .cadastro {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+  flex-direction: row;
+  align-items: end;
+  justify-content: end;
+} */
 
 .texto {
   display: flex;
@@ -85,31 +79,105 @@ form {
   justify-content: center;
 }
 
+
 .inputs {
-  width: 400px;
-  margin-left: 50px;
-  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .inputs i {
   opacity: 35%;
 }
 
-.inputs input {
-  width: 350px;
+.input {
+  width: 320px;
+  height: 50px;
+  border: none;
+  margin-top: 10px;
+  padding-left: 15px;
+  border: 1px solid blue;
+  position: relative;
+}
+
+.input input{
+  width: 320px;
   height: 50px;
   border: none;
   padding-left: 15px;
-  margin-top: 10px;
+  border: 1px solid blue;
 }
 
-.inputs select {
-  width: 368px;
+.section{
+  width: 320px;
+  height: 50px;
+  border: none;
+  margin-top: 10px;
+  padding-left: 15px;
+  border: 1px solid blue;
+  position: relative;
+}
+
+.section select{
+  width: 320px;
+  height: 50px;
+  border: none;
+  padding-left: 15px;
+  border: 1px solid blue;
+  margin-top: 0;
+}
+
+.icons-left-1{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-2{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-3{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-4{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-5{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-6{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.icons-left-7{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+select {
+  width: 350px;
   height: 50px;
   margin-top: 10px;
 }
 
-.inputs input:focus {
+input:focus {
   outline: none;
 }
 
@@ -117,30 +185,22 @@ form {
   color: rgba(0, 0, 0, 0.541);
 }
 
-.buttons {
+.buttons button {
   width: 140px;
+  height: 50px;
   text-align: center;
-  padding: 10px;
   background-color: #3AB19B;
   border-radius: 20px;
-  position: absolute;
-  left: 50%;
-  margin-top: 20px;
-  transform: translateX(-50%);
+  border: none;
 }
 
-.buttons:hover {
-  background-color: #60dbc5;
-  cursor: pointer;
-}
-
-.buttons a {
+.buttons button {
   color: white;
   transition: .20s ease-in-out all;
   text-decoration: none;
 }
 
-.buttons a:hover {
+.buttons button:hover {
   letter-spacing: 1px;
 }
 
@@ -150,8 +210,6 @@ form {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   background: linear-gradient(45deg, #71EED0, rgba(94, 244, 136, 0.65));
-  position: absolute;
-  left: 0;
   box-sizing: border-box;
   box-shadow: 10px 0px 35px rgba(0, 0, 0, 0.233);
 }
