--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -9,6 +9,67 @@
   height: 100vh;
   position: relative;
   background: #ffffff3a;
+  animation: initial-animation .8s ease-in-out alternate;
+}
+
+.logo{
+  position: absolute;
+  top: 0;
+  left: 10%;
+  z-index: 100;
+  padding: 18px;
+}
+
+.vetor-top{
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: waves-animation 5s ease-in-out infinite;
+  z-index: -1;
+}
+
+.vetor-bottom{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  animation: waves-animation-2  4s ease-in-out infinite;
+  z-index: -1;
+}
+
+.vetor-1-bolha{
+  position: absolute;
+  right: 0;
+  top: 0;
+  animation: elemento-animacao-1 8s ease-in-out infinite;
+  z-index: -1;  
+}
+.vetor-2-bolha{
+  position: absolute;
+  left: 30%;
+  bottom: 0;
+  width: 120px;
+  transform: rotate(45deg);
+  animation: elemento-animacao-2 10s ease-in-out infinite;
+  z-index: -100;
+}
+
+.vetor-3-bolha{
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  width: 150px;
+  animation: elemento-animacao-3 10s ease-in-out infinite;
+  z-index: -1;
+}
+
+.vetor-4-bolha{
+  position: absolute;
+  left: 1%;
+  bottom: 30%;
+  width: 250px;
+  animation: elemento-animacao-4 8s ease-in-out infinite;
+  z-index: -100;
+  transform: rotate(45deg);
 }
 
 img.vetor-1 {
@@ -34,8 +95,8 @@ img.vetor-1 {
 
 .top-descricao h2 {
   color: #7dc9bacb;
-  font-size: 34px;
-  font-weight: 300;
+  font-size: 20pt;
+  font-weight: 700;
 }
 
 .redes-sociais {
@@ -57,34 +118,26 @@ img.vetor-1 {
 }
 
 form {
-  width: 1000px;
+  width: 800px;
   background-color: white;
   border-radius: 25px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  height: 500px;
 }
 
-/* .cadastro {
-  display: flex;
-  flex-direction: row;
-  align-items: end;
-  justify-content: end;
-} */
-
-.texto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.cadastro {
+  background-color: rgb(241, 241, 241);
+  width: 400px;
 }
-
 
 .inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 370px;
 }
 
 .inputs i {
@@ -92,12 +145,11 @@ form {
 }
 
 .input {
-  width: 320px;
+  width: 350px;
   height: 50px;
   border: none;
   margin-top: 10px;
   padding-left: 15px;
-  border: 1px solid blue;
   position: relative;
 }
 
@@ -106,17 +158,23 @@ form {
   height: 50px;
   border: none;
   padding-left: 15px;
-  border: 1px solid blue;
+  color: #60dbc5;
+  transition: 50s ease-in-out;
+}
+
+.input input:focus{
+  border-bottom: 1px solid #60dbc5;
+  transform: translateY(-10%);
 }
 
 .section{
-  width: 320px;
+  width: 325px;
   height: 50px;
   border: none;
   margin-top: 10px;
-  padding-left: 15px;
-  border: 1px solid blue;
+  padding-left: 4px;
   position: relative;
+  margin-right: 25px;
 }
 
 .section select{
@@ -124,10 +182,11 @@ form {
   height: 50px;
   border: none;
   padding-left: 15px;
-  border: 1px solid blue;
   margin-top: 0;
-}
+  color: #71EED0;
+  background-color: rgba(255, 255, 255, 0);
 
+}
 .icons-left-1{
   position: absolute;
   left: 0;
@@ -181,10 +240,6 @@ input:focus {
   outline: none;
 }
 
-.inputs input::placeholder {
-  color: rgba(0, 0, 0, 0.541);
-}
-
 .buttons button {
   width: 140px;
   height: 50px;
@@ -236,7 +291,7 @@ input:focus {
   font-weight: 300;
 }
 
-.button-cartao {
+.button-cartao button{
   width: 140px;
   text-align: center;
   padding: 10px;
@@ -250,13 +305,13 @@ input:focus {
   transform: translateX(-50%);
 }
 
-.button-cartao a {
-  color: white;
-  transition: .15s ease-in-out;
+button {
+  transition: .20s ease-in-out;
   text-decoration: none;
+  color: white;
 }
 
-.button-cartao a:hover {
+.button-cartao button:hover {
   letter-spacing: 1px;
 }
 
@@ -352,15 +407,15 @@ form select:focus {
 
 @keyframes elemento-animacao-1 {
   0% {
-    transform: translate3d(0)
+    transform: translateY(0)
   }
 
   50% {
-    transform: translateY(250%);
+    transform: translate(-20%, 20%);
   }
 
   100% {
-    transform: translate3d(0)
+    transform: translateY(0)
   }
 }
 
@@ -370,7 +425,7 @@ form select:focus {
   }
 
   50% {
-    transform: translateY(-50%);
+    transform: rotate(100deg);
   }
 
   100% {
@@ -384,7 +439,22 @@ form select:focus {
   }
 
   50% {
-    transform: translatex(-100%);
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translate3d(0)
+  }
+}
+
+@keyframes elemento-animacao-4 {
+  0% {
+    transform: translate3d(0)
+  }
+
+  50% {
+    transform: rotate(20deg);
+    transform: translateY(20%);
   }
 
   100% {
@@ -397,9 +467,30 @@ form select:focus {
     transform: scaleX(100%);
   }
   50%{
-    transform: scaley(135%);
+    transform: scaleX(150%);
+  }
+  100%{
+    transform: scale(100%);
+  }
+}
+
+@keyframes waves-animation-2 {
+  0%{
+    transform: scaleX(100%);
+  }
+  50%{
+    transform: scale(150%);
   }
   100%{
     transform: scaleX(100%);
+  }
+}
+
+@keyframes initial-animation {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
   }
 }
