--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,6 +1,14 @@
 <div class="container-fluid conteudo">
-  <form action="" class="">
-    <section class="cartao-visita borda row d-none d-md-block">
+  <a class="logo" routerLink='/home'><img src="https://i.imgur.com/SKyw9eR.png" alt=""></a>
+  <img src="https://i.imgur.com/fWt2h8B.png" class="vetor-top" alt="">
+  <img src="https://i.imgur.com/mQUg9JH.png" class="vetor-bottom" alt="">
+
+  <img src="https://i.imgur.com/eKupvT7.png" alt="" class="vetor-1-bolha">
+  <img src="https://i.imgur.com/Sbu77WS.png" alt="" class="vetor-2-bolha">
+  <img src="https://i.imgur.com/pXhl08c.png" alt="" class="vetor-3-bolha">
+  <img src="https://i.imgur.com/rkYx10z.png" alt="" class="vetor-4-bolha d-none d-lg-block">
+  <form action="" class="form">
+    <section class="cartao-visita row d-none d-md-block">
       <div class="col-md-12">
         <div class="elemento-1"></div>
         <div class="elemento-2"></div>
@@ -12,20 +20,13 @@
             <p>Novos rumos, novas experiências e um único objetivo!</p>
           </div>
           <div class="button-cartao">
-            <a routerLink='/logar' href="">Acessar</a>
+            <button routerLink='/logar'>Acessar</button>
           </div>
         </div>
       </div>
     </section>
-    <div class="cadastro row  d-flex">
-      <div class="inputs borda col-md-12 col-xs-6">
-        <div class="top-descricao">
-          <div class="row">
-            <div class="col-12 texto">
-              <h2>Place2Getter</h2>
-            </div>
-          </div>
-        </div>
+    <div class="cadastro  row m-0 p-0">
+      <div class="inputs col-md-12 mr-0 pr-0 col-xs-6">
         <div class="row d-flex flex-column">
           <div class="inputs col-md-12">
             <div class="input">
@@ -39,13 +40,13 @@
             <div class="input">
               <i class="fas fa-lock icons-left-3"></i>
               <input (input)='confirmeSenha($event)' name="senha" type="password" placeholder="Senha">
-              <a href=""><i class="far fa-eye"></i></a>
+              <!-- <a href=""><i class="far fa-eye"></i></a> -->
             </div>
 
             <div class="input">
               <i class="fas fa-lock icons-left-4"></i>
               <input [(ngModel)]="usuario.senha" name="Confirmasenha" type="password" placeholder="Confima Senha">
-              <a href=""><i class="far fa-eye"></i></a>
+              <!-- <a href=""><i class="far fa-eye"></i></a> -->
             </div>
 
             <div class="input">
@@ -69,13 +70,13 @@
 
             <div class="section">
               <i class="far fa-check-square icons-left-7"></i>
-              <select (change)='tipoUsuario($event)' name="tipoUsuario" class="input borda" type="select">
+              <select (change)='tipoUsuario($event)' name="tipoUsuario" class="input" type="select">
                 <option>Qual é seu tipo de usuário?</option>
                 <option value="mentor">Mentor(a)</option>
                 <option value="aluno">Aluno(a)</option>
               </select>
             </div>
-            <div class="buttons">
+            <div class="buttons mt-2 p-2">
               <button type="submit" (click)='cadastrar()'>Cadastrar</button>
             </div>
           </div>
