--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <header class="header" #header>
   <div class="logo">
-    <a href=""><img src="https://i.imgur.com/LTOXyzg.png" alt=""></a>
+    <a href=""><img src="https://i.imgur.com/SKyw9eR.png" alt=""></a>
   </div>
   <div class="links ">
     <a href="">Seja um mentor</a>
