--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,6 @@
-
+*{
+  overflow: hidden;
+}
 
 .conteudo {
   display: flex;
@@ -6,6 +8,15 @@
   align-items: center;
   height: 100vh;
   position: relative;
+  animation: initial-animation .8s ease-in-out;
+}
+
+.logo{
+  position: absolute;
+  top: 0;
+  left: 10%;
+  z-index: 100;
+  padding: 18px;
 }
 
 img.vetor-1 {
@@ -13,7 +24,8 @@ img.vetor-1 {
   height: 300px;
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
+  animation: animation-vetor-top 5s ease-in-out infinite;
 }
 
 img.vetor-2 {
@@ -21,13 +33,30 @@ img.vetor-2 {
   height: 200px;
   position: absolute;
   bottom: 0;
-  left: 0;
+  right: 0;
+  animation:  animation-vetor-bottom 5s ease-in-out infinite;
+}
+
+img.elemento-1{
+  position: absolute;
+  right: 0;
+  top: 10%;
+  animation: elemento-animantion 10s ease-in-out infinite;
+}
+
+img.elemento-2{
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  transform: rotate (120deg);
+  animation:  elemento-animantion-2 10s ease-in-out infinite;
+  width: 190px;
 }
 
 .top-descricao h2 {
   color: #7dc9bacb;
   font-size: 34px;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .redes-sociais {
@@ -57,14 +86,13 @@ form {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  right: 10%;
 }
-
+.caixa-login{
+  margin-bottom: 3px;
+}
 .login {
   width: 400px;
   height: 300px;
-  position: relative;
 }
 
 .texto {
@@ -75,11 +103,13 @@ form {
 }
 
 .inputs {
-  margin-top: 40px;
+  margin-top: 25px;
   width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center ;
+  transition: 50s ease-in-out;
+
 }
 
 .inputs i {
@@ -92,10 +122,16 @@ form {
   border: none;
   padding-left: 15px;
   margin-top: 10px;
+  color: #71EED0;
 }
 
 .inputs input:focus {
   outline: none;
+}
+
+.inputs input:focus{
+  border-bottom: 1px solid #60dbc5;
+  transform: translateY(-10%);
 }
 
 a.buttons {
@@ -130,8 +166,6 @@ a.buttons:hover {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background: linear-gradient(45deg, #71EED0, rgba(94, 244, 136, 0.65));
-  position: absolute;
-  right: 10%;
   box-sizing: border-box;
   box-shadow: -10px 0px 35px   rgba(0, 0, 0, 0.233);
 }
@@ -180,3 +214,74 @@ a.buttons:hover {
 .button-cartao a:hover {
   letter-spacing: 1px;
 }
+
+
+@keyframes animation-vetor-top{
+  0%{
+    transform: scale(100%);
+  }
+  50%{
+    transform: scaleX(150%);
+  }
+  100%{
+    transform: scale(100%);
+  }
+}
+
+@keyframes animation-vetor-bottom{
+  0%{
+    transform: scale(100%);
+  }
+  50%{
+    transform: scale(200%);
+  }
+  100%{
+    transform: scale(100%);
+  }
+}
+
+@keyframes elemento-animantion{
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateY(40%);
+  }
+  100%{   
+    transform: translateX(0);
+  }
+}
+
+@keyframes elemento-animantion-2{
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(-20%);
+  }
+  100%{   
+    transform: translateX(0);
+  }
+}
+
+@keyframes elemento-animantion-2{
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(-20%);
+  }
+  100%{   
+    transform: translateX(0);
+  }
+}
+
+@keyframes initial-animation {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
