--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,51 +1,56 @@
 <div class="container-fluid conteudo">
-  <img class="vetor-1" src="https://i.imgur.com/1gMNFmZ.png" alt="">
-  <img class="vetor-2" src="https://i.imgur.com/juEgnty.png" alt="">
-  <form action="" class="">
-    <div class="row caixa-login ">
-      <div class="col-md-6">
-        <div class="login">
-          <div class="top-descricao">
-            <div class="row">
-              <div class="col-12 texto">
-                <h2>Place2Getter</h2>
-              </div>
-            </div>
-          </div>
-          <div class="inputs ">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="input-email ">
-                  <i class="far fa-envelope"></i>
-                  <input [(ngModel)]="usuarioLogin.usuario" name="email" type="text" placeholder="Email">
-                </div>
-                <div class="input-senha">
-                  <i class="fas fa-lock"></i>
-                  <input [(ngModel)]="usuarioLogin.senha" name="password" type="senha-login" placeholder="Senha">
+  <a class="logo" routerLink='/home'><img src="https://i.imgur.com/SKyw9eR.png" alt=""></a>
+  <img class="vetor-1" src="https://i.imgur.com/CQP9Fhe.png" alt="">
+  <img class="vetor-2" src="https://i.imgur.com/3mW5S1R.png" alt="">
+  <img src="https://i.imgur.com/IaeXWct.png" alt="" class="elemento-1">
+  <img src="https://i.imgur.com/qbA0gFa.png" alt="" class="elemento-2">
+  <div class="row ">
+    <form action="" class="">
+      <div class="row caixa-login ">
+        <div class="col-md-12 ">
+          <div class="login">
+            <div class="top-descricao">
+              <div class="row">
+                <div class="col-12 texto">
+                  <h2>Place2Getter</h2>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row  d-flex justify-content-center">
-            <div class="col-md-5">
-              <div>
-                <a class="buttons" (click)='acessar()'>Acessar</a>
+            <div class="inputs ">
+              <div class="row">
+                <div class="col-md-12 d-flex flex-column align-center">
+                  <div class="input-email">
+                    <i class="far fa-envelope"></i>
+                    <input [(ngModel)]="usuarioLogin.usuario" name="email" type="text" placeholder="Email">
+                  </div>
+                  <div class="input-senha">
+                    <i class="fas fa-lock"></i>
+                    <input [(ngModel)]="usuarioLogin.senha" name="senha-login" type="password" placeholder="Senha">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row  d-flex justify-content-center">
+              <div class="col-md-12  d-flex justify-content-center">
+                <div>
+                  <a class="buttons" (click)='acessar()'>Acessar</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </form>
-  <section class="cartao-visita d-none d-lg-block">
-    <div class="row ml-0 mr-0 cartao-visita-texto">
-      <div class="col-md-12">
-        <h1>Welcome Back!</h1>
-        <p> Colecione momentos e viva novas experiências.</p>
+    </form>
+    <section class="cartao-visita d-none d-lg-block">
+      <div class="row ml-0 mr-0 cartao-visita-texto">
+        <div class="col-md-12">
+          <h1>Welcome Back!</h1>
+          <p> Colecione momentos e viva novas experiências.</p>
+        </div>
+        <div class="button-cartao">
+          <a routerLink='/cadastrar'>Cadastrar</a>
+        </div>
       </div>
-      <div class="button-cartao">
-        <a routerLink='/cadastrar'>Cadastrar</a>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
 </div>
