--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,6 @@
   </div>
 </header>
 
-
 <div class="container-fluid m-0 p-0 ">
   <section class="banner container-fluid">
     <div class="row">
@@ -136,7 +135,7 @@
         <img class="img-fluid mentores-img" src="https://i.imgur.com/cpxZoUn.png" alt="">
       </div>
       <div class="col-md-6 m-0 p-0  texto-mentoria-2">
-        <h2 >Compartilhando
+        <h2 class="titulo-mentoria-2">Compartilhando
           experiências </h2>
         <div class="row  m-0 p-0 borda-mentoria">
           <div class="col-md-8 ">
