--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
             <div class="row  d-flex justify-content-center">
               <div class="col-md-12  d-flex justify-content-center">
                 <div>
-                  <a class="buttons" (click)='acessar()'>Acessar</a>
+                  <button class="buttons" (click)='acessar()'>Acessar</button>
                 </div>
               </div>
             </div>
@@ -48,7 +48,7 @@
           <p> Colecione momentos e viva novas experiências.</p>
         </div>
         <div class="button-cartao">
-          <a routerLink='/cadastrar'>Cadastrar</a>
+          <button routerLink='/cadastrar'>Cadastrar</button>
         </div>
       </div>
     </section>
