--- a/src/styles.css
+++ b/src/styles.css
@@ -9,18 +9,23 @@
 }
 
 body::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
+    width: 12px;     
+  }
+
+  html {
+    scroll-behavior: smooth !important;
   }
   
   body::-webkit-scrollbar-track {
     background: rgb(255, 255, 255); 
-    border-radius: 50px;       /* roundness of the scroll thumb */       /* color of the tracking area */
+    border-radius: 50px;      /* roundness of the scroll thumb */       /* color of the tracking area */
 }
   
   body::-webkit-scrollbar-thumb {
-    background-color: rgba(59, 59, 59, 0.288);    /* color of the scroll thumb */
+    background-color: rgba(59, 59, 59, 0.226);    /* color of the scroll thumb */
     border-radius: 20px;       /* roundness of the scroll thumb */
     border: 2px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+    
   }
 
   body::-webkit-scrollbar-thumb:hover {
@@ -29,4 +34,14 @@ body::-webkit-scrollbar {
     border: 1px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
     transition: 20s ease-in-out;
     height: 10px;
+  }
+
+
+  @keyframes scrollbar-animation {
+    from{
+      transform: scaleY(100%);
+    }
+    to{
+      transform: scaleY(120%);
+    }
   }
