--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -134,11 +134,11 @@
       <div class="col-md-6  m-0 p-0 section">
         <img class="img-fluid mentores-img" src="https://i.imgur.com/cpxZoUn.png" alt="">
       </div>
-      <div class="col-md-6 m-0 p-0  texto-mentoria-2">
+      <div class="col-md-6 m-0 p-0  texto-mentoria-2 ">
         <h2 class="titulo-mentoria-2">Compartilhando
           experiências </h2>
         <div class="row  m-0 p-0 borda-mentoria">
-          <div class="col-md-8 ">
+          <div class="col-md-8">
             <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
               cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
               nulla aute culpa Lorem voluptate. Aliquip Lorem qui pariatur velit irure officia aliqua labore nisi
@@ -148,8 +148,30 @@
       </div>
     </div>
   </section>
-</div>
+  <section class="mentores mt-5">
+    <div class="circlue-mentor-2"></div>
+    <div class="row m-0 p-0 d-flex justify-content-around ">
+      <div class="col-md-6 m-0 p-0  texto-mentoria-3 ">
+        <h2 class="text-center">Trocas contínuas</h2>
+        <div class="row m-0 p-0">
+          <div class="col-md-9">
+            <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
+              cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
+              nulla aute culpa Lorem voluptate. Aliquip Lorem qui pariatur velit irure officia aliqua labore nisi
+              eiusmod magna eu quis. Nisi cillum ullamco amet duis sunt aute velit est elit minim fugiat.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6  m-0 p-0  d-flex justify-content-end ">
+        <img class="mentores-img" src="https://i.imgur.com/XTMgYZ8.png" alt="">
+      </div>
+    </div>
+  </section>
 
+  <section>
+    
+  </section>
+</div>
 <footer>
   <h2>Place2Getter</h2>
   <div class="redes-sociais">
