--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -119,7 +119,7 @@ img.vetor-1 {
 
 form {
   width: 800px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.363);
   border-radius: 25px;
   display: flex;
   align-items: center;
@@ -128,7 +128,6 @@ form {
 }
 
 .cadastro {
-  background-color: rgb(241, 241, 241);
   width: 400px;
 }
 
@@ -160,6 +159,8 @@ form {
   padding-left: 15px;
   color: #60dbc5;
   transition: 50s ease-in-out;
+  background: rgba(255, 255, 255, 0.11);
+
 }
 
 .input input:focus{
