--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,28 +11,33 @@
     <a routerLink='/logar' class="button-1">SING IN</a>
     <a routerLink='/cadastrar' href="" class="button-2">REGISTER</a>
   </div>
+  <div class="toggler">
+    <div class="linha-1"></div>
+    <div class="linha-2"></div>
+    <div class="linha-3"></div>
+  </div>
 </header>
 
-<div class="container-fluid m-0 p-0 ">
+<div class="container-fluid m-0 p-0 main">
   <section class="banner container-fluid">
     <div class="row">
-      <div class="col-md-7 conteudo" #banner>
-        <h2 class="descricaoBanner">Place2Getter</h2>
-        <h4 class="textoBanner">Juntando pessoas
+      <div class="col-md-7 col-sm-12 conteudo" #banner>
+        <h2>Place2Getter</h2>
+        <h4>Juntando pessoas
           experiências e histórias.</h4>
       </div>
     </div>
     <div class="square" #divisorBanner>
-      <img src="https://i.imgur.com/thgnpzw.png" class="circleBanner" data-rellax-speed="-5" alt="">
+      <img src="https://i.imgur.com/thgnpzw.png" class="circleBanner d-none d-md-block" data-rellax-speed="-5" alt="">
     </div>
-    <div class="circlue-1 rellax" data-rellax-speed="2"></div>
-    <div class="circlue-2"></div>
-    <div class="circlue-3"></div>
-    <div class="circlue-4"></div>
+    <div class="circlue-1 rellax d-none d-sm-block " data-rellax-speed="2"></div>
+    <div class="circlue-2 d-none d-sm-block "></div>
+    <div class="circlue-3 d-sm-block"></div>
+    <div class="circlue-4 d-sm-block"></div>
     <img class="icon-mouse d-none d-sm-block" src="../../assets/Icons/mouse.png" alt="">
   </section>
-  <div class="container-fluid content-1">
-    <section class="">
+  <div class="container-fluid content-1 ">
+    <section>
       <img class="vetor-1 img-fluid" src="https://i.imgur.com/7lnMEhN.png" alt="">
       <img class="vetor-2 img-fluid" src="https://i.imgur.com/FAfh48o.png" alt="">
 
@@ -45,9 +50,9 @@
         src="https://i.imgur.com/Ddu8hoB.png" alt="">
       <img class="line-style img-fluid" src="https://i.imgur.com/hkacIZe.png" alt="">
       <img class="vetor-3 rellax" data-rellax-speed="1" src="https://i.imgur.com/O4VxOUA.png" alt="">
-      <div class="row">
-        <div class="col-md-12 texto-persona">
-          <h3 class="">Compartilhe com milhões
+      <div class="row ">
+        <div class="col-md-12 texto-persona ">
+          <h3>Compartilhe com milhões
             de jovens seus conhecimentos
           </h3>
         </div>
@@ -82,35 +87,35 @@
     <!-- <a class="link-categoria " href="">Explore novos caminhos</a> -->
     <h4 class="texto-categoria">Explore novos caminhos</h4>
     <div class="row m-0 p-0 categoria-itens">
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/vqkYemi.png" alt="">
-          <h3>Design</h3>
         </a>
+        <h3>Design</h3>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/c5fWK2o.png" alt="">
           <h3>Culinária</h3>
         </a>
 
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/OvLZf4a.png" alt="">
           <h3>Fotográfia</h3>
         </a>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/pOywQZS.png" alt="">
           <h3>Comunicação</h3>
         </a>
 
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/AfOVVeN.png" alt="">
           <h3>Programação</h3>
         </a>
 
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12 d-flex align-items-center flex-column">
         <a href=""><img src="https://i.imgur.com/VJazxZT.png" alt="">
           <h3>Estética</h3>
         </a>
@@ -131,13 +136,13 @@
   <section class="mentores">
     <div class="circlue-mentor"></div>
     <div class="row m-0 p-0 ">
-      <div class="col-md-6  m-0 p-0 section">
+      <div class="col-md-6 m-0 p-0 section">
         <img class="img-fluid mentores-img" src="https://i.imgur.com/cpxZoUn.png" alt="">
       </div>
       <div class="col-md-6 m-0 p-0  texto-mentoria-2 ">
         <h2 class="titulo-mentoria-2">Compartilhando
           experiências </h2>
-        <div class="row  m-0 p-0 borda-mentoria">
+        <div class="row  m-0 p-0-mentoria">
           <div class="col-md-8">
             <p>Adipisicing culpa ea qui Lorem nulla incididunt velit labore. Velit voluptate irure adipisicing dolor
               cupidatat sunt aute enim cillum adipisicing. Ut magna nisi nisi pariatur nulla nisi laborum et nostrud
@@ -168,8 +173,47 @@
     </div>
   </section>
 
-  <section>
-    
+  <section class="section-impacto position-relative">
+    <img class="elemento-style position-absolute" src="https://i.imgur.com/9dxlp1Z.png" alt="">
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-3 ml-5 d-flex justify-content-center position-relative">
+          <img class="impacto-img img-fluid" src="https://i.imgur.com/BrBQC1a.jpg" alt="">
+          <div class="caixa-persona position-absolute"></div>
+        </div>
+        <div class="col-md-8">
+          <h2>Compartilhando
+            vivências.</h2>
+          <div class="row mt-5 pt-5 d-flex justify-content-around">
+            <div class="col-md-5 d-flex justify-content-center position-relative">
+              <img class="impacto-img img-fluid " src="https://i.imgur.com/dJjSOTo.jpg" alt="">
+              <div class="caixa-persona-2 position-absolute"></div>
+            </div>
+            <div class="col-md-6">
+              <img class="position-absolute aspas" src="https://i.imgur.com/mPpN6Jp.png" alt="">
+              <p>Jovens que desejam adquirir <span>habilidades</span> e conhecimentos nas mais diversas áreas através da
+                nossa rede social.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="desenvolvedores">
+    <div class="row m-0 p-0  d-flex justify-content-center">
+      <div class="col-md-6  d-flex justify-content-center">
+        <h4>time de desenvolvedores</h4>
+      </div>
+    </div>
+    <div class="row m-0 p-0 ">
+      <div class="col-md-3  d-flex align-items-center flex-column">
+        <img src="https://i.imgur.com/7Y4FG5P.png" alt="">
+        <h3>Lucas Cruz</h3>
+        <small>Dev. Full Stack Java Jr.</small>
+        <p>Estudante de Análise e desenvolvimento de sistemas apaixonado por processos criativos, movido por idéias
+          inovadoras e tudo que a tecnologia pode viabilizar </p>
+      </div>
+    </div>
   </section>
 </div>
 <footer>
